# TC2038

./: LICENSE  README.md
A01632240-A01638391_Act5.7  /: CMakeLists.txt  Makefile  README.rtf  data.txt  delaunay
A01632240-A01638391_Act5.7  /PointGenerator/: Aldopoints.txt  Maradonapoints.txt  Messipoints.txt  facerecognition.py
Actividad imposible/: CMakeCache.txt  cmake_install.cmake  data.txt
Activity 1.2/Activity 2.2/: Readme.txt  main.cpp  tempCodeRunnerFile.cpp
Activity 1.2/Activity 2.2.xcodeproj/: project.pbxproj
Activity 1.2/Activity 2.2.xcodeproj/project.xcworkspace/xcuserdata/diegovelazquez.xcuserdatad/: UserInterfaceState.xcuserstate
Activity 1.2/Activity 2.2.xcodeproj/xcuserdata/diegovelazquez.xcuserdatad/xcschemes/: xcschememanagement.plist
Activity1.1/: Readme.txt  main.cpp  tempCodeRunnerFile.cpp
Activity1.2/Activity1.2/: Readme.txt  main.cpp
Activity1.3/: Case1.txt  Case4.txt  Main.cpp  Readme.txt
Activity1.3/Test files/: Case2.txt  Case3.txt  Case5.txt
IntegrativeActivity1/: A01638391_ActInt1.rar  ReflexActInt1_A01632240.docx  main.cpp
IntegrativeActivity1/Test files/: a.txt  b.txt  d.txt  transmission1.txt
TC2038(Portafolio_Final)/ActInt1/: ReflexActInt1_A01638391.docx
TC2038(Portafolio_Final)/ActInt1/Test files/: 1.txt  c.txt
TC2038(Portafolio_Final)/ActInt2/: Case1.txt  Readme.txt  ReflexActInt2_A01632240.docx  main  main.cpp  team.txt  voronoi.py
delaunay/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  data.txt
(+2 files in other folders)
